@@ -623,7 +623,7 @@ bool CamuleApp::OnInit()
 		ShowAlert(msg, _("Warning"), wxCENTRE | wxOK | wxICON_ERROR);
 	
 		fprintf(stderr, "\n--------------------------------------------------\n");
-		fprintf(stderr, "%s", (const char*)unicode2char(msg));
+		fprintf(stderr, "%s", (const char*)unicode2UTF8(msg));
 		fprintf(stderr, "\n--------------------------------------------------\n\n");
 	}
 #endif
@@ -1716,7 +1716,9 @@ void CamuleApp::CheckNewVersion(uint32 result)
 				AddLogLineM(false, wxString::Format(_("Your aMule version is %i.%i.%i and the latest version is %li.%li.%li"), VERSION_MJR, VERSION_MIN, VERSION_UPDATE, fields[0], fields[1], fields[2]));
 				AddLogLineM(false, _("The latest version can always be found at http://www.amule.org"));
 				#ifdef AMULE_DAEMON
-				puts(unicode2UTF8(wxString::Format(_("WARNING: Your aMuled version is outdated: %i.%i.%i < %li.%li.%li"), VERSION_MJR, VERSION_MIN, VERSION_UPDATE, fields[0], fields[1], fields[2])));
+				printf("%s\n", (const char*)unicode2UTF8(wxString::Format(
+					_("WARNING: Your aMuled version is outdated: %i.%i.%i < %li.%li.%li"),
+					VERSION_MJR, VERSION_MIN, VERSION_UPDATE, fields[0], fields[1], fields[2])));
 				#endif
 			} else {
 				AddLogLineM(false, _("Your copy of aMule is up to date."));
